tdf#94088 add import of HTML inline graphics

Related: fdo#63211 for saving. This one adds the import side, plus
fallbacks to use the new FillStyle attributes in HTML im/export in a
SvxBrushItem. Also added graphic import for inline graphics. Comment
markers inserted at places where functionality may be added in the
future when the new FillStyle attributes would be more used in this
content. Unit test checks PageBackground and ParagraphBaground import.

Change-Id: I3f198677db553ad198e0add3162603a4735398f1
Reviewed-on: https://gerrit.libreoffice.org/20129
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Tested-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>